@@ -11,7 +11,6 @@
  *******************************************************************************/
 package org.eclipse.lsp4e.jdt;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -20,6 +19,8 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
 import org.eclipse.core.runtime.IProgressMonitor;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jdt.ui.text.java.ContentAssistInvocationContext;
 import org.eclipse.jdt.ui.text.java.IJavaCompletionProposalComputer;
 import org.eclipse.jface.text.contentassist.ICompletionProposal;
@@ -36,20 +37,21 @@ public class LSJavaCompletionProposalComputer implements IJavaCompletionProposal
 	private static final long TIMEOUT_LENGTH = 300;
 
 	private final LSContentAssistProcessor lsContentAssistProcessor = new LSContentAssistProcessor(false);
-	private String javaCompletionSpecificErrorMessage;
+	private @Nullable String javaCompletionSpecificErrorMessage;
 
 	@Override
 	public void sessionStarted() {
 	}
 
 	@Override
+	@NonNullByDefault({})
 	public List<ICompletionProposal> computeCompletionProposals(ContentAssistInvocationContext context,
 			IProgressMonitor monitor) {
 		CompletableFuture<ICompletionProposal[]> future = CompletableFuture.supplyAsync(() ->
 			lsContentAssistProcessor.computeCompletionProposals(context.getViewer(), context.getInvocationOffset()));
 
 		try {
-			return Arrays.asList(asJavaProposals(future));
+			return List.of(asJavaProposals(future));
 		} catch (ExecutionException | TimeoutException e) {
 			LanguageServerPlugin.logError(e);
 			javaCompletionSpecificErrorMessage = createErrorMessage(e);
@@ -99,14 +101,15 @@ public class LSJavaCompletionProposalComputer implements IJavaCompletionProposal
 	}
 
 	@Override
+	@NonNullByDefault({})
 	public List<IContextInformation> computeContextInformation(ContentAssistInvocationContext context,
 			IProgressMonitor monitor) {
 		IContextInformation[] contextInformation = lsContentAssistProcessor.computeContextInformation(context.getViewer(), context.getInvocationOffset());
-		return Arrays.asList(contextInformation);
+		return List.of(contextInformation);
 	}
 
 	@Override
-	public String getErrorMessage() {
+	public @Nullable String getErrorMessage() {
 		return javaCompletionSpecificErrorMessage != null ? javaCompletionSpecificErrorMessage : lsContentAssistProcessor.getErrorMessage();
 	}
 
