@@ -32,7 +32,6 @@ import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jface.text.IDocument;
 import org.eclipse.jface.text.ITextViewer;
-import org.eclipse.lsp4e.LSPEclipseUtils;
 import org.eclipse.lsp4e.LanguageServerWrapper;
 import org.eclipse.lsp4e.LanguageServers;
 import org.eclipse.lsp4e.LanguageServers.LanguageServerDocumentExecutor;
@@ -65,7 +64,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testCollectAll() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
+		final var hoverCount = new AtomicInteger();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -74,7 +73,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				return CompletableFuture.completedFuture(hoverResponse);
 			}
 		});
@@ -83,14 +82,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<List<String>> result =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h.getContents().getLeft().get(0).getLeft()));
 
 		List<String> hovers = result.join();
@@ -101,7 +100,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testCollectAllExcludesNulls() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
+		final var hoverCount = new AtomicInteger();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -110,7 +109,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				return CompletableFuture.completedFuture(hoverCount.get() == 1 ? hoverResponse : null);
 			}
 		});
@@ -119,14 +118,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<List<String>> result =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? null : h.getContents().getLeft().get(0).getLeft()));
 
 		List<String> hovers = result.join();
@@ -137,7 +136,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testComputeAll() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
+		final var hoverCount = new AtomicInteger();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -146,7 +145,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				final int currentCount = hoverCount.get();
 				return CompletableFuture.completedFuture(hoverResponse).thenApplyAsync(t -> {
 					try {
@@ -163,14 +162,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		List<CompletableFuture<String>> result =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.computeAll(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h.getContents().getLeft().get(0).getLeft()));
 
 		assertEquals("Should have had two responses", 2, result.size());
@@ -197,15 +196,15 @@ public class LanguageServersTest extends AbstractTestWithProject {
 	public void testCollectAllUserCannotBlockListener() throws Exception {
 		// This test will only work if a minimum of two tasks can be run in the common pool without blocking!
 		Assume.assumeTrue("Test skipped as common thread pool does not have multiple executors", ForkJoinPool.commonPool().getParallelism() >= 2);
-		Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
+		final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
 		MockLanguageServer.INSTANCE.setHover(hoverResponse);
 
 		IFile testFile = TestUtils.createUniqueTestFile(project, "Here is some content");
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
@@ -213,7 +212,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		final long startTime = System.currentTimeMillis();
 
 		CompletableFuture<String> resultThreadFuture =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll(ls -> ls.getTextDocumentService().hover(params))
 
 				// Schedule a slow 'computation' on the response, and make a note of the thread it runs in
@@ -227,7 +226,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 				});
 
 		CompletableFuture<?> fastHover = LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll(ls -> ls.getTextDocumentService().hover(params));
 
 		fastHover.join();
@@ -242,8 +241,8 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testComputeFirst() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
-		Vector<CompletableFuture<?>> internalResults = new Vector<>();
+		final var hoverCount = new AtomicInteger();
+		final var internalResults = new Vector<CompletableFuture<?>>();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -252,7 +251,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				final int currentCount = hoverCount.get();
 				CompletableFuture<Hover> result =  CompletableFuture.completedFuture(hoverResponse).thenApplyAsync(t -> {
 					try {
@@ -271,14 +270,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<Optional<String>> response =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h.getContents().getLeft().get(0).getLeft()));
 
 		Optional<String> result = response.join();
@@ -293,7 +292,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testComputeFirstSkipsEmptyResults() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
+		final var hoverCount = new AtomicInteger();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -302,7 +301,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				if (hoverCount.get() == 1) {
 					return CompletableFuture.completedFuture(null);
 				}
@@ -321,14 +320,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<Optional<String>> response =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? null : h.getContents().getLeft().get(0).getLeft()));
 
 		Optional<String> result = response.join();
@@ -356,14 +355,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<Optional<String>> response =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? null : h.getContents().getLeft().get(0).getLeft()));
 
 		Optional<String> result = response.join();
@@ -372,7 +371,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testComputeFirstTreatsEmptyListAsNull() throws Exception {
-		final AtomicInteger hoverCount = new AtomicInteger();
+		final var hoverCount = new AtomicInteger();
 		MockLanguageServer.INSTANCE.setTextDocumentService(new MockTextDocumentService(MockLanguageServer.INSTANCE::buildMaybeDelayedFuture) {
 			@Override
 			public synchronized void didChange(DidChangeTextDocumentParams params) {
@@ -381,7 +380,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
+				final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent" + hoverCount.incrementAndGet())), new Range(new Position(0,  0), new Position(0, 10)));
 				if (hoverCount.get() == 1) {
 					return CompletableFuture.completedFuture(null);
 				}
@@ -400,15 +399,15 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<Optional<List<String>>> response =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
-				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? Collections.emptyList() : Collections.singletonList(h.getContents().getLeft().get(0).getLeft())));
+				.withCapability(ServerCapabilities::getHoverProvider)
+				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? Collections.emptyList() : List.of(h.getContents().getLeft().get(0).getLeft())));
 
 		Optional<List<String>> result = response.join();
 		assertTrue("Should have returned a result", result.isPresent());
@@ -449,7 +448,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 			}
 		});
 
-		Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
+		final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
 		MockLanguageServer.INSTANCE.setHover(hoverResponse);
 		CompletableFuture<?> initial = CompletableFuture.completedFuture(null);
 
@@ -463,8 +462,8 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		for (int i = 0; i < 5000; i++) {
 			final int current = i + 1;
 			text.append(i + "\n");
-			final HoverParams params = new HoverParams();
-			final Position position = new Position();
+			final var params = new HoverParams();
+			final var position = new Position();
 
 			// encode the iteration number in a suitable numeric field on the hover request params, so the
 			// mock server can use it to verify the requests are indeed received in the correct order
@@ -473,13 +472,13 @@ public class LanguageServersTest extends AbstractTestWithProject {
 			params.setPosition(position);
 
 			CompletableFuture<List<Hover>> result =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll(ls -> ls.getTextDocumentService().hover(params));
 			initial = CompletableFuture.allOf(initial, result);
 		}
 
 		initial.join();
-		StringBuilder message = new StringBuilder();
+		final var message = new StringBuilder();
 		message.append("Too Early hover requests: "); message.append(tooEarlyHover.size());
 		message.append(System.lineSeparator());
 		tooEarlyHover.forEach(i -> {
@@ -503,7 +502,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 	 */
 	@Test
 	public void testBlockingServerDoesNotBlockUIThread() throws Exception {
-		final AtomicInteger uiDispatchCount = new AtomicInteger();
+		final var uiDispatchCount = new AtomicInteger();
 
 		MockLanguageServer.INSTANCE.getInitializeResult().getCapabilities()
 		.setTextDocumentSync(TextDocumentSyncKind.Incremental);
@@ -526,7 +525,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 			}
 		});
 
-		Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
+		final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
 		MockLanguageServer.INSTANCE.setHover(hoverResponse);
 		CompletableFuture<?> initial = CompletableFuture.completedFuture(null);
 
@@ -538,7 +537,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 		final long startTime = System.currentTimeMillis();
 
-		final StringBuilder bulkyText = new StringBuilder();
+		final var bulkyText = new StringBuilder();
 
 		// Construct a reasonably bulky payload for the document updates: if the
 		// payload is small then buffering will mitigate any back-pressure from the server
@@ -552,13 +551,13 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		for (int i = 0; i < 10; i++) {
 			final int current = i + 1;
 			text.append(content + "\n");
-			final HoverParams params = new HoverParams();
-			final Position position = new Position();
+			final var params = new HoverParams();
+			final var position = new Position();
 			position.setCharacter(current);
 			position.setLine(0);
 			params.setPosition(position);
 			CompletableFuture<?> hoverFuture = LanguageServers.forDocument(document)
-			.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+			.withCapability(ServerCapabilities::getHoverProvider)
 			.collectAll(ls -> {
 				try {
 					// If this is non-null then we're running on a/the SWT event thread
@@ -587,7 +586,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 	@Test
 	public void testNoMatchingServers() throws Exception {
-		Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
+		final var hoverResponse = new Hover(List.of(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
 		MockLanguageServer.INSTANCE.setHover(hoverResponse);
 
 		IFile testFile = TestUtils.createUniqueTestFile(project, "");
@@ -598,8 +597,8 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 		assertFalse("Should not have been any valid LS", executor.anyMatching());
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
@@ -627,7 +626,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 
 			@Override
 			public synchronized CompletableFuture<Hover> hover(HoverParams position) {
-				final CompletableFuture<Hover> result = new CompletableFuture<>();
+				final var result = new CompletableFuture<Hover>();
 				result.completeExceptionally(new IllegalStateException("No hovering here"));
 				return result;
 			}
@@ -637,14 +636,14 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<Optional<String>> response =  LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.computeFirst(ls -> ls.getTextDocumentService().hover(params).thenApply(h -> h == null ? null : h.getContents().getLeft().get(0).getLeft()));
 
 		response.join();
@@ -657,26 +656,27 @@ public class LanguageServersTest extends AbstractTestWithProject {
 	 */
 	@Test
 	public void testWrapperWrapsSameLS() throws Exception {
-		Hover hoverResponse = new Hover(Collections.singletonList(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
+		final var hoverResponse = new Hover(
+				List.of(Either.forLeft("HoverContent")), new Range(new Position(0,  0), new Position(0, 10)));
 		MockLanguageServer.INSTANCE.setHover(hoverResponse);
 
 		IFile testFile = TestUtils.createUniqueTestFileMultiLS(project, "Here is some content");
 		ITextViewer viewer = TestUtils.openTextViewer(testFile);
 		final IDocument document = viewer.getDocument();
 
-		final HoverParams params = new HoverParams();
-		final Position position = new Position();
+		final var params = new HoverParams();
+		final var position = new Position();
 		position.setCharacter(10);
 		position.setLine(0);
 		params.setPosition(position);
 
 		CompletableFuture<List<Pair<LanguageServerWrapper, LanguageServer>>> async = LanguageServers.forDocument(document)
-				.withFilter(capabilities -> LSPEclipseUtils.hasCapability(capabilities.getHoverProvider()))
+				.withCapability(ServerCapabilities::getHoverProvider)
 				.collectAll((w, ls) -> ls.getTextDocumentService().hover(params).thenApply(h -> Pair.of(w, ls)));
 
 		final List<Pair<LanguageServerWrapper, LanguageServer>> result = async.join();
 
-		final AtomicInteger matching = new AtomicInteger();
+		final var matching = new AtomicInteger();
 
 		assertEquals("Should have had two responses", 2, result.size());
 		assertNotEquals("LS should have been different proxies", result.get(0).second(), result.get(1).second());
@@ -708,7 +708,7 @@ public class LanguageServersTest extends AbstractTestWithProject {
 		var editor1 = openEditor(testFile1);
 		var editor2 = openEditor(testFile2);
 
-		final AtomicInteger serverCounter = new AtomicInteger();
+		final var serverCounter = new AtomicInteger();
 
 		final List<String> serversForProject = LanguageServers.forProject(project).collectAll(ls -> CompletableFuture.completedFuture("Server" + serverCounter.incrementAndGet())).join();
 		assertTrue(serversForProject.contains("Server1"));
