@@ -9,7 +9,6 @@
 package org.eclipse.lsp4e.test.semanticTokens;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -35,10 +34,10 @@ public class SemanticTokensTestUtil {
 			"}\n";
 
 	public static List<Integer> keywordSemanticTokens() {
-		List<List<Integer>> expectedTokens = new ArrayList<>();
-		expectedTokens.add(Arrays.asList(0,0,4,0,0));
-		expectedTokens.add(Arrays.asList(3,0,4,0,0));
-		expectedTokens.add(Arrays.asList(0,9,7,0,0));
+		final var expectedTokens = new ArrayList<List<Integer>>();
+		expectedTokens.add(List.of(0,0,4,0,0));
+		expectedTokens.add(List.of(3,0,4,0,0));
+		expectedTokens.add(List.of(0,9,7,0,0));
 
 		return expectedTokens.stream().flatMap(List::stream).toList();
 	}
@@ -119,8 +118,8 @@ public class SemanticTokensTestUtil {
 		};
 	}
 	public static void setSemanticTokensLegend(final List<String> tokenTypes, List<String> tokenModifiers) {
-		SemanticTokensLegend legend = new SemanticTokensLegend(tokenTypes, tokenModifiers);
-		SemanticTokensWithRegistrationOptions semanticTokensWithRegistrationOptions = new SemanticTokensWithRegistrationOptions(legend);
+		final var legend = new SemanticTokensLegend(tokenTypes, tokenModifiers);
+		final var semanticTokensWithRegistrationOptions = new SemanticTokensWithRegistrationOptions(legend);
 		semanticTokensWithRegistrationOptions.setFull(true);
 		semanticTokensWithRegistrationOptions.setRange(false);
 
