@@ -15,9 +15,9 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URLClassLoader;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -51,7 +51,7 @@ public class CreateAndRegisterContentTypeLSPLaunchConfigMapping implements IStar
 		ILaunchConfigurationType externalType = launchManager.getLaunchConfigurationType(IExternalToolConstants.ID_PROGRAM_LAUNCH_CONFIGURATION_TYPE);
 		LanguageServersRegistry registry = LanguageServersRegistry.getInstance();
 		try {
-			String externalProcessLaunchName = "Mock external LS";
+			final var externalProcessLaunchName = "Mock external LS";
 			ILaunchConfiguration mockServerLauch = null;
 			for (ILaunchConfiguration launch : launchManager.getLaunchConfigurations(externalType)) {
 				if (launch.getName().equals(externalProcessLaunchName)) {
@@ -66,7 +66,7 @@ public class CreateAndRegisterContentTypeLSPLaunchConfigMapping implements IStar
 				workingCopy.setAttribute(IExternalToolConstants.ATTR_SHOW_CONSOLE, false);
 				workingCopy.setAttribute(IExternalToolConstants.ATTR_BUILD_SCOPE, "${none}");
 				workingCopy.setAttribute(DebugPlugin.ATTR_CAPTURE_OUTPUT, true);
-				String exe = "";
+				var exe = "";
 				if (Platform.OS_WIN32.equals(Platform.getOS())) {
 					exe = ".exe";
 				}
@@ -77,7 +77,7 @@ public class CreateAndRegisterContentTypeLSPLaunchConfigMapping implements IStar
 				mockServerLauch = workingCopy.doSave();
 				registry.registerAssociation(contentTypeManager.getContentType("org.eclipse.lsp4e.test.content-type2"),
 						LaunchConfigurationStreamProvider.findLaunchConfiguration(IExternalToolConstants.ID_PROGRAM_LAUNCH_CONFIGURATION_TYPE, mockServerLauch.getName()),
-						Collections.singleton(ILaunchManager.RUN_MODE));
+						Set.of(ILaunchManager.RUN_MODE));
 			}
 		} catch (CoreException e) {
 			LanguageServerPlugin.logError(e);
@@ -88,10 +88,10 @@ public class CreateAndRegisterContentTypeLSPLaunchConfigMapping implements IStar
 	private String getClassPath(Class<?> clazz) {
 		ClassLoader loader = clazz.getClassLoader();
 		if (loader instanceof URLClassLoader urlClassLoader) {
-			return Arrays.asList(urlClassLoader.getURLs()).stream().map(url -> url.getFile()).collect(Collectors.joining(System.getProperty("path.separator")));
+			return List.of(urlClassLoader.getURLs()).stream().map(url -> url.getFile()).collect(Collectors.joining(System.getProperty("path.separator")));
 		}
-		LinkedList<Bundle> toProcess = new LinkedList<>();
-		Set<Bundle> processed = new HashSet<>();
+		final var toProcess = new LinkedList<Bundle>();
+		final var processed = new HashSet<Bundle>();
 		Bundle current = FrameworkUtil.getBundle(clazz);
 		if (current != null) {
 			toProcess.add(current);
