@@ -19,7 +19,6 @@ package org.eclipse.lsp4e.tests.mock;
 import java.io.File;
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -123,10 +122,10 @@ public class MockTextDocumentService implements TextDocumentService {
 	public <U> MockTextDocumentService(Function<U, CompletableFuture<U>> futureFactory) {
 		this._futureFactory = futureFactory;
 		// Some default values for mocks, can be overriden
-		CompletionItem item = new CompletionItem();
+		final var item = new CompletionItem();
 		item.setLabel("Mock completion item");
-		mockCompletionList = new CompletionList(false, Collections.singletonList(item));
-		mockHover = new Hover(Collections.singletonList(Either.forLeft("Mock hover")), null);
+		mockCompletionList = new CompletionList(false, List.of(item));
+		mockHover = new Hover(List.of(Either.forLeft("Mock hover")), null);
 		mockPrepareRenameResult = Either3
 				.forSecond(new PrepareRenameResult(new Range(new Position(0, 0), new Position(0, 0)), "placeholder"));
 		this.documentSymbols = Collections.emptyList();
@@ -165,7 +164,7 @@ public class MockTextDocumentService implements TextDocumentService {
 
 	@Override
 	public CompletableFuture<List<? extends Location>> references(ReferenceParams params) {
-		return futureFactory(Arrays.asList(this.mockReferences));
+		return futureFactory(List.of(this.mockReferences));
 	}
 
 	@Override
@@ -208,7 +207,7 @@ public class MockTextDocumentService implements TextDocumentService {
 		}
 		File file = new File(URI.create(params.getTextDocument().getUri()));
 		if (file.exists() && file.length() > 100) {
-			return CompletableFuture.completedFuture(Collections.singletonList(new CodeLens(
+			return CompletableFuture.completedFuture(List.of(new CodeLens(
 					new Range(new Position(1, 0), new Position(1, 1)), new Command("Hi, I'm a CodeLens", null), null)));
 		}
 		return CompletableFuture.completedFuture(Collections.emptyList());
