@@ -11,7 +11,8 @@
  *******************************************************************************/
 package org.eclipse.lsp4e.operations.codeactions;
 
-import java.io.IOException;
+import static org.eclipse.lsp4e.internal.NullSafetyHelper.castNonNull;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.URI;
@@ -27,6 +28,7 @@ import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IMarker;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.runtime.CoreException;
+import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.text.AbstractInformationControlManager;
 import org.eclipse.jface.text.ITextHover;
@@ -66,6 +68,8 @@ import org.eclipse.ui.internal.progress.ProgressInfoItem;
 
 public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator2 {
 
+	private static final IMarkerResolution[] NO_MARKER_RESOLUTIONS = new IMarkerResolution[0];
+
 	private static final String LSP_REMEDIATION = "lspCodeActions"; //$NON-NLS-1$
 
 	private static final IMarkerResolution2 COMPUTING = new IMarkerResolution2() {
@@ -83,7 +87,7 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 		@Override
 		public Image getImage() {
 			// load class so image is loaded
-			return JFaceResources.getImage(ProgressInfoItem.class.getPackage().getName() + ".PROGRESS_DEFAULT"); //$NON-NLS-1$
+			return JFaceResources.getImage(ProgressInfoItem.class.getPackageName() + ".PROGRESS_DEFAULT"); //$NON-NLS-1$
 		}
 
 		@Override
@@ -101,25 +105,25 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 				checkMarkerResolution(marker);
 				att = marker.getAttribute(LSP_REMEDIATION);
 			}
-		} catch (IOException | CoreException | ExecutionException e) {
-			LanguageServerPlugin.logError(e);
-			return new IMarkerResolution[0];
 		} catch (InterruptedException e) {
 			LanguageServerPlugin.logError(e);
 			Thread.currentThread().interrupt();
-			return new IMarkerResolution[0];
+			return NO_MARKER_RESOLUTIONS;
+		} catch (Exception e) {
+			LanguageServerPlugin.logError(e);
+			return NO_MARKER_RESOLUTIONS;
 		}
 		if (att == COMPUTING) {
 			return new IMarkerResolution[] { COMPUTING };
 		} else if (att == null) {
-			return new IMarkerResolution[0];
+			return NO_MARKER_RESOLUTIONS;
 		}
 		return ((List<Either<Command, CodeAction>>) att).stream().filter(LSPCodeActionMarkerResolution::canPerform)
 				.map(command -> command.map(CommandMarkerResolution::new, CodeActionMarkerResolution::new))
 				.toArray(IMarkerResolution[]::new);
 	}
 
-	private void checkMarkerResolution(IMarker marker) throws IOException, CoreException, InterruptedException, ExecutionException {
+	private void checkMarkerResolution(IMarker marker) throws CoreException, InterruptedException, ExecutionException {
 		IResource res = marker.getResource();
 		if (res instanceof IFile file) {
 			Object[] attributes = marker.getAttributes(new String[]{LSPDiagnosticsToMarkers.LANGUAGE_SERVER_ID, LSPDiagnosticsToMarkers.LSP_DIAGNOSTIC});
@@ -129,10 +133,10 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 					.withPreferredServer(LanguageServersRegistry.getInstance().getDefinition((String) attributes[0]));
 			if (executor.anyMatching()) {
 				final var diagnostic = (Diagnostic) attributes[1];
-				final var context = new CodeActionContext(Collections.singletonList(diagnostic));
+				final var context = new CodeActionContext(List.of(diagnostic));
 				final var params = new CodeActionParams();
 				params.setContext(context);
-				params.setTextDocument(LSPEclipseUtils.toTextDocumentIdentifier(res));
+				params.setTextDocument(castNonNull(LSPEclipseUtils.toTextDocumentIdentifier(res)));
 				params.setRange(diagnostic.getRange());
 				if (marker.exists()) { // otherwise the marker has been removed by now
 					marker.setAttribute(LSP_REMEDIATION, COMPUTING);
@@ -174,7 +178,7 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 					final var ca = (ContentAssistant) f.get(quickAssistant);
 					Method m = ContentAssistant.class.getDeclaredMethod("isProposalPopupActive"); //$NON-NLS-1$
 					m.setAccessible(true);
-					boolean isProposalPopupActive = (Boolean) m.invoke(ca);
+					final var isProposalPopupActive = (Boolean) castNonNull(m.invoke(ca));
 					if (isProposalPopupActive) {
 						quickAssistant.showPossibleQuickAssists();
 					}
@@ -198,10 +202,6 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 		}
 	}
 
-	static boolean providesCodeActions(final ServerCapabilities capabilities) {
-		return capabilities != null && LSPEclipseUtils.hasCapability(capabilities.getCodeActionProvider());
-	}
-
 	@Override
 	public boolean hasResolutions(IMarker marker) {
 		try {
@@ -217,7 +217,7 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 		return false;
 	}
 
-	static boolean canPerform(Either<Command, CodeAction> command) {
+	static boolean canPerform(@Nullable Either<Command, CodeAction> command) {
 		if (command == null) {
 			return false;
 		}
@@ -239,7 +239,7 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 					TextDocumentEdit textedit = change.getLeft();
 					VersionedTextDocumentIdentifier id = textedit.getTextDocument();
 					URI uri = URI.create(id.getUri());
-					if (uri != null && LSPEclipseUtils.isReadOnly(uri)) {
+					if (LSPEclipseUtils.isReadOnly(uri)) {
 						return false;
 					}
 				}
@@ -249,7 +249,7 @@ public class LSPCodeActionMarkerResolution implements IMarkerResolutionGenerator
 			if (changes != null) {
 				for (java.util.Map.Entry<String, List<TextEdit>> textEdit : changes.entrySet()) {
 					URI uri = URI.create(textEdit.getKey());
-					if (uri != null && LSPEclipseUtils.isReadOnly(uri)) {
+					if (LSPEclipseUtils.isReadOnly(uri)) {
 						return false;
 					}
 				}
